UPDATE: 1. Fetching organizations their roles and rights