@@ -45,41 +45,31 @@ public class DataInitializer implements CommandLineRunner {
         Role role2 = new Role(2, "Hot card role", "");
         Role role3 = new Role(3, "Cool card role", "");
         Role role4 = new Role(4, "Monitoring role", "");
-        roleRepository.saveAll(List.of(role1, role2, role3, role4));
 
-        Right right1 =  new Right("PAN Viewer", "");
-        Right right2 = new Right("Individual Customer Viewer", "");
-        Right right3 = new Right("Token Viewer", "");
-        Right right4 = new Right("Card Blocking", "");
+        Right right1 =  new Right(1,"PAN Viewer", "");
+        Right right2 = new Right(2,"Individual Customer Viewer", "");
+        Right right3 = new Right(3, "Token Viewer", "");
+        Right right4 = new Right(4, "Card Blocking", "");
         rightsRepository.saveAll(List.of(right1, right2, right3, right4));
 
-        role1.getRights().add(right1);
-        role1.getRights().add(right2);
-        role1.getRights().add(right3);
-
-        role2.getRights().add(right4);
+        role1.setRights(List.of(right1, right2, right3, right4));
+        role2.setRights(List.of(right4));
         roleRepository.saveAll(List.of(role1, role2, role3, role4));
 
 
         //------------------ORGANIZATIONS---------------------------------
-        Organization org1 = new Organization(1, "Guardian Bank");
-        Organization org2 = new Organization(2, "Family Bank Ltd");
-        Organization org3 = new Organization(3, "Mayfair Bank");
-        Organization org4 = new Organization(4, "Paramount Bank");
-        Organization org5 = new Organization(5, "Sterling Bank");
 
-        orderRepository.saveAll(Arrays.asList(org1, org2, org3, org4, org5));
-
+        Organization org1 = new Organization(1, "Interswitch Group Kenya");
+        orderRepository.saveAll(List.of(org1));
 
         //------------------SUPER ADMIN---------------------------------
-
 
         Optional<User> userOptional = userRepository.findUserByEmailAddress("joe.mak@example.com");
 
         if(userOptional.isEmpty()) {
             User superAdmin = new User();
             String encPass = passwordEncoder.encode("password123");
-            Optional<Organization> organizationOptional = organizationRepository.findByOrganizationId(2);
+            Optional<Organization> organizationOptional = organizationRepository.findByOrganizationId(1);
 
             superAdmin.setEmailAddress("joe.mak@example.com");
             superAdmin.setPassword(encPass);
